# ferron

./: .dockerignore  .gitignore  .rumdl.toml  .rusty-hook.toml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPILATION.md  CONFIGURATION.md  CONTRIBUTE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile-rebuild.cross  Dockerfile.alpine  Dockerfile.cross  Dockerfile.debian  Dockerfile.static  Dockerfile.test  Justfile  LICENSE  MODULES.md  Makefile  README.md  SECURITY.md  VULNERABILITIES.md  biome.json  build.ps1  compose.yml  docker-compose.yml  ferron-build.yaml  ferron-docker.kdl  ferron-docker.yaml  ferron-packages.kdl  ferron-release.kdl  ferron-release.yaml  ferron.kdl  ferron.yaml  project-karpacz.yaml  (+3 more)
core/: Cargo.toml
core/src/: admin.rs  lib.rs  loader.rs  logging.rs  pipeline.rs  providers.rs  registry.rs  runtime.rs  shutdown.rs  util.rs
core/src/builtin/: mod.rs  validator.rs
core/src/config/: adapter.rs  builder.rs  layer.rs  macros.rs  mod.rs  validator.rs
core/src/observability/: context.rs  event.rs  mod.rs  provider.rs  sink.rs
crates/ferron-bin/: Cargo.toml
crates/ferron-bin/src/: main.rs  runtime.rs
crates/ferron-http/: Cargo.toml
crates/ferron-http/src/: context.rs  lib.rs  loader.rs  server.rs
crates/ferron-registry/: Cargo.toml
crates/ferron-registry/src/: lib.rs
e2e/: Cargo.toml  Dockerfile.test  README.md  build.rs
e2e/images/backend/: .dockerignore  index.js  package-lock.json
e2e/images/backend-grpc/: Dockerfile  package-lock.json
e2e/images/cgi/: Cargo.toml  entrypoint.sh
e2e/images/fcgiwrap/: Dockerfile
e2e/tests/: acme.rs  auth.rs  cache.rs  cgi.rs  config.rs  dcompress.rs  fcgi.rs  lb.rs  limit.rs  redirecting.rs  reload.rs  replace.rs  rewrite.rs  rproxy.rs  rproxy_grpc.rs  static.rs  tls.rs  yaml2kdl.rs
e2e/tests/common/: mod.rs
entrypoint/: Cargo.toml  build.rs
entrypoint/src/: daemon.rs  lib.rs  panic.rs  service.rs
ferron/: Cargo.toml  build.rs
ferron-common/: Cargo.toml
ferron-common/src/: config.rs  dns.rs  lib.rs  logging.rs  modules.rs  observability.rs  runtime.rs
ferron-common/src/http_proxy/: builder.rs  load_balancer.rs  mod.rs  proxy_client.rs  request_parts.rs  send_request.rs
ferron-common/src/util/: anti_xss.rs  config_macros.rs  config_placeholders.rs  default_html_page.rs  file_stream.rs  header_placeholders.rs  ip_blocklist.rs  lookup_env_var.rs  match_hostname.rs  mod.rs  module_cache.rs  monoio_file_stream.rs  monoio_file_stream_no_spawn.rs  no_server_verifier.rs  parse_q_value_header.rs  send_async_io.rs  send_rw_stream.rs  sizify.rs  ttl_cache.rs
ferron-dns-builtin/: Cargo.toml
ferron-dns-builtin/src/: bunny.rs  cloudflare.rs  desec.rs  digitalocean.rs  dnsimple.rs  lib.rs  ovh.rs  porkbun.rs  rfc2136.rs  route53.rs
ferron-load-modules/: Cargo.toml  build.rs  build_with_modules.rs
ferron-load-modules/src/: lib.rs
ferron-mod-example/: Cargo.toml
ferron-mod-example/src/: lib.rs
ferron-modules-builtin/: Cargo.toml
ferron-modules-builtin/src/: blocklist.rs  buffer.rs  core.rs  fproxy_fallback.rs  lib.rs  rewrite.rs  status_codes.rs  trailing.rs
ferron-modules-builtin/src/optional/: asgi.rs  cache.rs  cgi.rs  dcompress.rs  fauth.rs  fcgi.rs  fproxy.rs  fproxyauth.rs  grpcweb.rs  limit.rs  mod.rs  replace.rs  rproxy.rs  scgi.rs  static.rs  wsgi.rs  wsgid.rs
ferron-modules-builtin/src/util/: atomic_cache.rs  basic_auth.rs  body_replacer.rs  cache_control.rs  copy_move.rs  mod.rs  pending_connection_guard.rs  processing_request_guard.rs  read_to_end_move.rs  split_stream_by_map.rs
ferron-observability-builtin/: Cargo.toml
ferron-observability-builtin/src/: lib.rs  logfile.rs  otlp.rs  stdlog.rs
ferron-passwd/: Cargo.toml
ferron-passwd/src/: main.rs
ferron-precompress/: Cargo.toml
ferron-precompress/src/: main.rs
ferron-script/: Cargo.toml  TESTING.md
ferron-script/src/: config.rs  context.rs  engine.rs  lib.rs  runtime.rs
ferron-yaml2kdl/: Cargo.toml
ferron-yaml2kdl/src/: main.rs
ferron/src/: acme.rs  handler.rs  listener_handler_communication.rs  listener_quic.rs  listener_tcp.rs  logging.rs  main.rs  panic.rs  request_handler.rs  runtime.rs  server.rs  tls_setup.rs  tls_util.rs
ferron/src/acme/: mod.rs
ferron/src/common/: log.rs  mod.rs  with_runtime.rs
ferron/src/config/: mod.rs  processing.rs
ferron/src/listeners/: mod.rs  quic.rs  tcp.rs
ferron/src/modules/: blocklist.rs  buffer.rs  core.rs  default_handler_checks.rs  fproxy_fallback.rs  mod.rs  non_standard_codes.rs  redirect_trailing_slashes.rs  redirects.rs  rewrite.rs  static_file_serving.rs  status_codes.rs  trailing.rs  url_rewrite.rs  x_forwarded_for.rs
ferron/src/optional_modules/: asgi.rs  cache.rs  cgi.rs  example.rs  fauth.rs  fcgi.rs  fproxy.rs  rproxy.rs  scgi.rs  wsgi.rs  wsgid.rs
ferron/src/setup/: acme.rs  cli.rs  metrics.rs  mod.rs  ocsp.rs  tls.rs  tls_single.rs
ferron/src/util/: anti_xss.rs  asgi_messages.rs  asgi_structs.rs  async_to_sync.rs  atomic_cache.rs  body_replacer.rs  cache_control.rs  cgi_response.rs  combine_config.rs  config_macros.rs  copy_move.rs  default_html_page.rs  env_config.rs  error_config.rs  error_pages.rs  fcgi_decoder.rs  fcgi_encoder.rs  fcgi_name_value_pair.rs  generate_directory_listing.rs  header_placeholders.rs  hostname_radix_tree.rs  ip_blocklist.rs  ip_match.rs  is_localhost.rs  load_config.rs  (+35 more)
modules/admin-api/: Cargo.toml
modules/config-ferronconf/: Cargo.toml
modules/dns-stalwart/: Cargo.toml
modules/http-basicauth/: Cargo.toml
modules/http-buffer/: Cargo.toml
modules/http-cache/: Cargo.toml
project-karpacz/: Cargo.toml  build.rs
project-karpacz-common/: Cargo.toml
project-karpacz-common/src/: lib.rs
project-karpacz-mod-example/: Cargo.toml
project-karpacz-mod-example/src/: lib.rs
project-karpacz-mod-fproxy/: Cargo.toml
project-karpacz-mod-fproxy/src/: lib.rs
project-karpacz-mod-rproxy/: Cargo.toml
project-karpacz-mod-rproxy/src/: lib.rs
project-karpacz-passwd/: Cargo.toml
project-karpacz-passwd/src/: main.rs
project-karpacz/src/: main.rs  request_handler.rs  server.rs
(+946 files in other folders)
