[workspace]
members = [
    "ferron",
    "ferron-passwd",
]
resolver = "2"

[workspace.dependencies]
yaml-rust2 = "0.11.0"
password-auth = { version = "1.0.0", features = ["argon2", "pbkdf2", "scrypt"] }
shiba = "0.1.1"
mimalloc = "0.1.45"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
