[workspace]
members = [
    "ferron",
    "ferron-common",
    "ferron-dns-builtin",
    "ferron-load-modules",
    "ferron-modules-builtin",
    "ferron-passwd",
    "ferron-yaml2kdl-core",
    "ferron-yaml2kdl", "ferron-precompress", "ferron-observability-builtin",
]
exclude = ["build/installer", "build/prepare", "dockertest", "e2e"]
resolver = "2"

[workspace.dependencies]
kdl = "6.3.4"
mimalloc = { version = "0.1.46" }
password-auth = { version = "1.0.0", features = ["pbkdf2", "argon2", "scrypt"] }
shiba = "0.1.1"
ferron-common = { path = "./ferron-common", default-features = false }
ferron-dns-builtin = { path = "./ferron-dns-builtin", default-features = false }
ferron-load-modules = { path = "./ferron-load-modules", default-features = false }
ferron-modules-builtin = { path = "./ferron-modules-builtin", default-features = false }
ferron-observability-builtin = { path = "./ferron-observability-builtin", default-features = false }

[patch.crates-io]
monoio = { git = "https://github.com/DorianNiemiecSVRJS/monoio.git" }                                           # This is needed for the web server to be able to accept more than one connection on Windows, and to be able to be compiled correctly on FreeBSD
dns-update = { git = "https://github.com/stalwartlabs/dns-update.git" }                                         # This is the Git upstream of the "dns-update" crate, with updated dependencies and more DNS providers

[patch.'https://github.com/ferronweb/ferron']
ferron-common = { path = "./ferron-common" }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[workspace.metadata.cargo-shear]
ignored = ["shiba", "ferron-modules-builtin", "ferron-dns-builtin", "ferron-observability-builtin"]
