[package]
name = "e2e"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.2", default-features = false, features = ["http2", "rustls-no-provider"] }
tempfile = "3.27.0"
testcontainers = { version = "0.27.2", features = ["http_wait_plain", "reusable-containers"] }
tokio = { version = "1.50.0", features = ["full"] }
flate2 = "1.1.9"
password-auth = "1.0.0"
brotli = "8.0.2"
zstd = "0.13.3"
rcgen = "0.14.7"
h3 = "0.0.8"
quinn = "0.11.9"
h3-quinn = "0.0.10"
rustls = { version = "0.23.37", default-features = false, features = ["std", "ring", "tls12"] }
rustls-pki-types = "1.14.0"
http = "1.4.0"
tokio-tungstenite = "0.26.1"
futures-util = "0.3.31"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31.2", features = ["fs"] }

[[test]]
name = "acme"
path = "tests/acme.rs"

[[test]]
name = "auth"
path = "tests/auth.rs"

[[test]]
name = "cache"
path = "tests/cache.rs"

[[test]]
name = "config"
path = "tests/config.rs"

[[test]]
name = "dcompress"
path = "tests/dcompress.rs"

[[test]]
name = "lb"
path = "tests/lb.rs"

[[test]]
name = "limit"
path = "tests/limit.rs"

[[test]]
name = "redirecting"
path = "tests/redirecting.rs"

[[test]]
name = "replace"
path = "tests/replace.rs"

[[test]]
name = "reload"
path = "tests/reload.rs"

[[test]]
name = "rewrite"
path = "tests/rewrite.rs"

[[test]]
name = "rproxy"
path = "tests/rproxy.rs"

[[test]]
name = "static"
path = "tests/static.rs"

[[test]]
name = "tls"
path = "tests/tls.rs"

[[test]]
name = "yaml2kdl"
path = "tests/yaml2kdl.rs"
