[package]
name = "ferron-dns-builtin"
version = "2.3.0"
edition = "2021"

[dependencies]
ferron-common = { workspace = true }
porkbun-api = { version = "1.0.1", optional = true }
dns-update = { version = "0.1.2", optional = true, default-features = false, features = [
    "hickory-aws-lc-rs",
] }
desec_api = { version = "0.4.0", optional = true }
aws-config = { version = "1.8.1", optional = true, default-features = false, features = [
    "default-https-client", # This feature flag enables aws-lc-rs crypto provider
    "rt-tokio",
] } # Needed for Route53
aws-credential-types = { version = "1.2.3", optional = true, features = [
    "hardcoded-credentials",
] } # Needed for Route53
aws-sdk-route53 = { version = "1.84.0", optional = true, default-features = false, features = [
    "default-https-client", # This feature flag enables aws-lc-rs crypto provider
    "rt-tokio",
] }
tokio = { version = "1.47.0", default-features = false, features = [
    "rt",
    "sync",
] }
async-trait = "0.1.88"
anyhow = "1.0.98"
base64 = { version = "0.22.1", optional = true }
hyper = { version = "1.6.0", optional = true }

[features]
default = ["cloudflare", "desec", "porkbun", "rfc2136", "route53"]
cloudflare = ["dns-update"]
desec = ["desec_api"]
porkbun = ["porkbun-api"]
rfc2136 = ["dns-update", "base64", "hyper"]
route53 = ["aws-config", "aws-credential-types", "aws-sdk-route53"]
