[package]
name = "ferron-load-modules"
version = "2.0.0-beta.18"
edition = "2021"

[dependencies]
ferron-common = { workspace = true }
ferron-modules-builtin = { workspace = true, features = [
    "cache",
    "cgi",
    "fauth",
    "fcgi",
    "fproxy",
    "limit",
    "replace",
    "rproxy",
    "scgi",
    "static",
] }
ferron-dns-builtin = { workspace = true, features = [
    "cloudflare",
    "desec",
    "porkbun",
    "rfc2136",
    "route53",
] }
anyhow = "1.0.98"

[dev-dependencies]
shiba = { workspace = true }

[build-dependencies]
yaml-rust2 = "0.10.2"
toml = "0.9.2"

[features]
default = ["runtime-monoio"]
runtime-monoio = [
    "ferron-common/runtime-monoio",
    "ferron-modules-builtin/runtime-monoio",
]
runtime-tokio = [
    "ferron-common/runtime-tokio",
    "ferron-modules-builtin/runtime-tokio",
]
