[package]
name = "ferron-load-modules"
version = "2.5.4"
edition = "2021"

[dependencies]
ferron-common = { workspace = true }
ferron-modules-builtin = { workspace = true, features = [
    "cache",
    "cgi",
    "dcompress",
    "fauth",
    "fcgi",
    "fproxy",
    "fproxyauth",
    "limit",
    "replace",
    "rproxy",
    "scgi",
    "static",
] }
ferron-dns-builtin = { workspace = true, features = [
    "bunny",
    "cloudflare",
    "desec",
    "digitalocean",
    "ovh",
    "porkbun",
    "rfc2136",
    "route53",
] }
ferron-observability-builtin = { workspace = true, features = [
    "logfile",
    "otlp",
    "stdlog"
] }
anyhow = "1.0.98"

[dev-dependencies]
shiba = { workspace = true }

[build-dependencies]
yaml-rust2 = "0.11.0"
toml = "0.9.2"

[features]
default = ["runtime-monoio"]
runtime-monoio = [
    "ferron-common/runtime-monoio",
    "ferron-modules-builtin/runtime-monoio",
]
runtime-tokio = [
    "ferron-common/runtime-tokio",
    "ferron-modules-builtin/runtime-tokio",
]

[package.metadata.cargo-shear]
ignored = ["anyhow"]
