[package]
name = "ferron-modules-builtin"
version = "2.2.1"
edition = "2021"

[dependencies]
# Ferron internal dependencies
ferron-common = { workspace = true }

# Error Handling & Utilities
anyhow = "1.0.98"
chrono = "0.4.41"
fancy-regex = "0.17.0"
urlencoding = "2.1.3"
send_wrapper = { version = "0.6.0", optional = true, features = ["futures"] }
arc-swap = { version = "1.8.0", optional = true }

# HTTP/Web Server Core
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.13", features = ["client"] }
http-body-util = "0.1.3"
httparse = { version = "1.10.1", optional = true }
ppp = { version = "2.3.0", optional = true }

# TLS/Security
rustls = { version = "0.23.27", default-features = false, features = [
    "tls12",
    "std",
    "aws-lc-rs",
] }
tokio-rustls = { version = "0.26.2", default-features = false, features = [
    "tls12",
    "aws-lc-rs",
] }
rustls-pki-types = "1.12.0"
rustls-platform-verifier = "0.6.0"
webpki-roots = "1.0.2"
password-auth = { workspace = true }
sha2 = { version = "0.10.9", optional = true }
base64 = "0.22.1"
rand = { version = "0.9.1", optional = true }

# Async Runtime & Concurrency
tokio = { version = "1.45.0", features = [
    "fs",
    "io-util",
    "parking_lot",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
monoio = { version = "0.2.4", optional = true, features = [
    "poll-io",
    "sync",
    "threadpool",
] }
monoio-compat = { version = "0.2.2", optional = true, features = ["hyper"] }
async-channel = "2.3.1"
async-trait = "0.1.88"
futures-util = { version = "0.3.31", features = ["sink"] }
pin-project-lite = "0.2.16"
tokio-util = { version = "0.7.15", features = ["compat"] }

# Process & System Integration
async-process = { version = "2.3.0", optional = true }

# Data Handling & Serialization
bytes = { version = "1.10.1" }

# File Serving & Compression
new_mime_guess = { version = "4.0.4", optional = true, default-features = false }
async-compression = { version = "0.4.30", optional = true, features = [
    "tokio",
    "gzip",
    "brotli",
    "deflate",
    "zstd",
] }

# Caching
cache_control = { version = "0.2.0", optional = true }
hashlink = "0.11.0"
quick_cache = { version = "0.6.18", optional = true }

# Rate limitation
tokenbucket = { version = "0.1.6", optional = true }
memchr = { version = "2.7.4", optional = true }
cidr = "0.3.1"
smallvec = { version = "1.15.0", features = [
    "write",
    "union",
    "const_generics",
] }

[dev-dependencies]
tokio-test = "0.4.4"
shiba = { workspace = true }

[features]
default = [
    "cache",
    "cgi",
    "dcompress",
    "fauth",
    "fcgi",
    "fproxy",
    "limit",
    "replace",
    "rproxy",
    "runtime-monoio",
    "scgi",
    "static",
]
default-tokio = [
    "cache",
    "cgi",
    "dcompress",
    "fauth",
    "fcgi",
    "fproxy",
    "limit",
    "replace",
    "rproxy",
    "runtime-tokio",
    "scgi",
    "static",
]
cache = ["cache_control", "quick_cache"]
cgi = ["httparse", "memchr"]
dcompress = ["async-compression"]
fauth = ["rand", "arc-swap"]
fcgi = ["tokio-util/codec", "httparse", "memchr"]
fproxy = []
limit = ["tokenbucket"]
replace = ["memchr"]
rproxy = ["rand", "ppp", "arc-swap"]
runtime-monoio = ["async-process", "monoio", "monoio-compat", "send_wrapper"]
runtime-tokio = ["hyper-util/tokio"]
scgi = ["httparse", "memchr"]
static = ["new_mime_guess", "async-compression", "sha2"]
