[package]
name = "ferron-observability-builtin"
version = "2.5.2"
edition = "2021"

[dependencies]
# Ferron internal dependencies
ferron-common = { workspace = true }

# Error Handling & Utilities
anyhow = "1.0.98"
chrono = { version = "0.4.41", optional = true }

# Async Runtime & Concurrency
tokio = { version = "1.45.0", features = [
    "fs",
    "io-util",
    "parking_lot",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tokio-util = { version = "0.7.15" }
async-channel = "2.3.1"

# OpenTelemetry
opentelemetry-otlp = { version = "0.31.0", optional = true, default-features = false, features = [
  "logs",
  "metrics",
  "trace",
  "grpc-tonic",
  "http-proto",
  "http-json",
  "hyper-client"
]}
opentelemetry-http = { version = "0.31.0", optional = true, default-features = false, features = [
  "hyper"
]}
opentelemetry_sdk = { version = "0.31.0", optional = true, default-features = false, features = [
  "logs",
  "metrics",
  "trace",
  "experimental_logs_batch_log_processor_with_async_runtime",
  "experimental_metrics_periodicreader_with_async_runtime",
  "experimental_trace_batch_span_processor_with_async_runtime",
  "rt-tokio"
]}
opentelemetry = { version = "0.31.0", optional = true, default-features = false, features = [
  "logs",
  "metrics",
  "trace"
]}

# HTTP client
hyper = { version = "1.6.0", features = ["client"], optional = true }
hyper-rustls = { version = "0.27.7", optional = true, default-features = false, features = [
    "tls12",
    "aws-lc-rs",
    "http1",
    "http2",
    "native-tokio",
] }
rustls = { version = "0.23.27", optional = true, default-features = false, features = [
    "tls12",
    "std",
    "aws-lc-rs",
] }
rustls-platform-verifier = { version = "0.6.0", optional = true }
webpki-roots = { version = "1.0.2", optional = true }

# Data structures
hashlink = { version = "0.11.0", optional = true }

[features]
default = ["logfile", "otlp"]
stdlog = ["chrono"]
logfile = ["chrono"]
otlp = [
  "opentelemetry-otlp",
  "opentelemetry-http",
  "opentelemetry_sdk",
  "opentelemetry",
  "hyper",
  "hyper-rustls",
  "rustls",
  "rustls-platform-verifier",
  "webpki-roots",
  "hashlink"
]
