[package]
name = "ferron-passwd"
version = "2.0.0-beta.17"
edition = "2021"

[package.metadata.winresource]
ProductName = "Ferron password utility"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
password-auth = { workspace = true }
rpassword = "7.4.0"
mimalloc = { workspace = true }

[dev-dependencies]
shiba = { workspace = true }

[build-dependencies]
winresource = "0.1.19"
