[package]
name = "ferron-passwd"
version = "1.3.7"
edition = "2021"

[package.metadata.winresource]
ProductName = "Ferron password utility"

[dependencies]
clap = { version = "4.5.55", features = ["derive"] }
password-auth.workspace = true
rpassword = "7.4.0"
yaml-rust2.workspace = true
mimalloc = { workspace = true }

[dev-dependencies]
shiba = { workspace = true }

[build-dependencies]
winresource = "0.1.19"
