[package]
name = "ferron-passwd"
version = "2.5.5"
edition = "2021"

[package.metadata.winresource]
ProductName = "Ferron password utility"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
password-auth = { workspace = true }
rpassword = "7.4.0"

[target.'cfg(target_arch = "x86")'.dependencies]
mimalloc = { workspace = true } # Mimalloc v3 would use instructions unsupported by old 32-bit-only x86 CPUs

[target.'cfg(not(target_arch = "x86"))'.dependencies]
mimalloc = { workspace = true, features = ["v3"] }

[dev-dependencies]
shiba = { workspace = true }

[build-dependencies]
winresource = "0.1.19"
