[package]
name = "ferron-yaml2kdl"
version = "2.3.0"
edition = "2021"

[package.metadata.winresource]
ProductName = "Ferron YAML to KDL configuration converter"

[dependencies]
clap = { version = "4.5.38", features = ["cargo"] }
ferron-yaml2kdl-core = { path = "../ferron-yaml2kdl-core" }

[target.'cfg(target_arch = "x86")'.dependencies]
mimalloc = { workspace = true } # Mimalloc v3 would use instructions unsupported by old 32-bit-only x86 CPUs

[target.'cfg(not(target_arch = "x86"))'.dependencies]
mimalloc = { workspace = true, features = ["v3"] }

[dev-dependencies]
shiba = { workspace = true }

[build-dependencies]
winresource = "0.1.19"
