[package]
name = "ferron"
version = "2.0.0-beta.14"
edition = "2021"

[dependencies]
# Ferron internal dependencies
ferron-common = { workspace = true }
ferron-load-modules = { workspace = true }

# Error Handling & Utilities
anyhow = "1.0.98"
human-panic = "2.0.2"
chrono = "0.4.41"
fancy-regex = "0.15.0"
glob = "0.3.2"
urlencoding = "2.1.3"
miette = { version = "7.6.0", features = ["fancy"] }

# HTTP/Web Server Core
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.13", features = ["client"] }
h3 = "0.0.8"
h3-quinn = "0.0.10"
quinn = { version = "0.11.8", default-features = false, features = [
    "platform-verifier",
    "aws-lc-rs",
    "rustls-aws-lc-rs",
] }
http-body-util = "0.1.3"
httpdate = "1.0.3"
socket2 = "0.6.0"
ppp = "2.3.0"

# TLS/Security
rustls = { version = "0.23.27", default-features = false, features = [
    "tls12",
    "std",
    "aws-lc-rs",
] }
tokio-rustls = { version = "0.26.2", default-features = false, features = [
    "tls12",
    "aws-lc-rs",
] }
hyper-rustls = { version = "0.27.7", default-features = false, features = [
    "tls12",
    "aws-lc-rs",
    "http1",
    "http2",
    "native-tokio",
] }
instant-acme = { version = "0.8.0", default-features = false, features = [
    "hyper-rustls",
    "aws-lc-rs",
    "rcgen",
] }
rustls-native-certs = "0.8.1"
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.12.0"
rustls-platform-verifier = "0.6.0"
ocsp-stapler = { version = "0.4.7", default-features = false, features = [
    "aws-lc-rs",
] }
x509-parser = "0.17.0"
rcgen = { version = "0.14.1", default-features = false, features = [
    "crypto",
    "aws_lc_rs",
    "pem",
] }
base64 = "0.22.1"
xxhash-rust = { version = "0.8.15", features = ["std", "xxh3"] }

# Async Runtime & Concurrency
tokio = { version = "1.45.0", features = [
    "fs",
    "io-util",
    "parking_lot",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
monoio = { version = "0.2.4", optional = true, features = [
    "poll-io",
    "sync",
    "threadpool",
] }
monoio-compat = { version = "0.2.2", optional = true, features = ["hyper"] }
async-channel = "2.3.1"
async-io = "2.4.0"
async-trait = "0.1.88"
futures-util = { version = "0.3.31", features = ["sink"] }
pin-project-lite = "0.2.16"
blocking = { version = "1.6.1", optional = true }
tokio-util = "0.7.15"

# Data Handling & Serialization
bytes = { version = "1.10.1" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
kdl = { workspace = true }
ferron-yaml2kdl-core = { path = "../ferron-yaml2kdl-core", optional = true }

# CLI & Configuration
clap = { version = "4.5.38", features = ["cargo"] }
dirs = "6.0.0"

# Automatic TLS DNS-01 challenge
hickory-resolver = "0.25.2"
porkbun-api = { version = "1.0.1", optional = true }
dns-update = { version = "0.1.2", optional = true, default-features = false, features = [
    "hickory-aws-lc-rs",
] }
desec_api = { version = "0.4.0", optional = true }
aws-config = { version = "1.8.1", optional = true, default-features = false, features = [
    "default-https-client", # This feature flag enables aws-lc-rs crypto provider
    "rt-tokio",
] } # Needed for Route53
aws-credential-types = { version = "1.2.3", optional = true, features = [
    "hardcoded-credentials",
] } # Needed for Route53
aws-sdk-route53 = { version = "1.84.0", optional = true, default-features = false, features = [
    "default-https-client", # This feature flag enables aws-lc-rs crypto provider
    "rt-tokio",
] }

# Performance & Utilities
mimalloc = { workspace = true }
smallvec = { version = "1.15.0", features = [
    "write",
    "union",
    "const_generics",
] }

[dev-dependencies]
shiba = { workspace = true }

[build-dependencies]
winresource = "0.1.19"

[features]
default = [
    "acmedns-cloudflare",
    "acmedns-desec",
    "acmedns-porkbun",
    "acmedns-rfc2136",
    "acmedns-route53",
    "config-yaml-legacy",
    "runtime-monoio",
]
default-tokio = [
    "acmedns-cloudflare",
    "acmedns-desec",
    "acmedns-porkbun",
    "acmedns-rfc2136",
    "acmedns-route53",
    "config-yaml-legacy",
    "runtime-tokio",
]
acmedns-cloudflare = ["dns-update"]
acmedns-desec = ["desec_api"]
acmedns-porkbun = ["porkbun-api"]
acmedns-rfc2136 = ["dns-update"]
acmedns-route53 = ["aws-config", "aws-credential-types", "aws-sdk-route53"]
config-docker-auto = []
config-yaml-legacy = ["ferron-yaml2kdl-core"]
runtime-monoio = [
    "monoio",
    "monoio-compat",
    "blocking",
    "ferron-common/runtime-monoio",
    "ferron-load-modules/runtime-monoio",
]
runtime-tokio = [
    "tokio/full",
    "quinn/runtime-tokio",
    "hyper-util/tokio",
    "ferron-common/runtime-tokio",
    "ferron-load-modules/runtime-tokio",
]
